ACS-352-fix tests